--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ html,
 body {
     min-height: 100%;
     min-width: 100%;
+    width: 1200px;
 }
 
 body {
@@ -208,7 +209,8 @@ a:active {
 
 .row {
     padding: 0;
-    max-width: 1200px;
+    /*max-width: 1200px;*/
+    width: 1200px;
     margin: 0 auto;
 }
 
@@ -641,8 +643,8 @@ height: 100%;
 .elipse-link {
     display: inline-block;
     vertical-align: top;
-    width: 90px;
-    padding: 3px 6px;
+    min-width: 90px;
+    padding: 3px 19px;
     font-family: "Open Sans", Arial, Verdana, sans-serif;
     font-size: 14px;
     line-height: 20px;
@@ -1157,6 +1159,369 @@ height: 100%;
 }
 
 /* ----- /Main Page - Section 3 ------ */
+
+/* ----- Show Travel Preview  - Search Section ------ */
+
+.search-sect.travel-preview {
+
+}
+
+.search-sect.travel-preview .col {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.search-sect.travel-preview  .col-1 {
+    width: 51%;
+}
+
+.search-sect.travel-preview .elipse-link {
+    padding: 3px 16px;
+}
+
+.search-sect.travel-preview .list-oval-links li {
+    padding: 5px 4px;
+}
+
+.search-sect.travel-preview .col-2 {
+    width: 32%;
+}
+
+.search-sect.travel-preview .col-3 {
+    width: 17%;
+    text-align: right;
+}
+
+.search-sect.travel-preview .blue-btn {
+    min-width: 200px;
+}
+
+
+/* ----- /Show Travel Preview - Search Section ------ */
+
+
+/* ----- Show Travel Preview - Content Section ------ */
+
+.place-info-header {
+    border-bottom: 1px solid #c3c3c3;
+    padding: 0 0 15px 20px;
+}
+
+.show-travel-preview .place-info-header .col {
+    display: inline-block;
+    vertical-align: middle;
+    /*width: 50%;*/
+}
+
+.date-switch-box {
+    width: 55%;
+}
+
+/*.place-info-header .col-2 {
+    text-align: center;
+}*/
+
+.date-switch {
+
+}
+
+.date-switch .date {
+    display: inline-block;
+    vertical-align: top;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: normal;
+    color: #555555;
+}
+
+/*.switch-date-btn {
+    display: inline-block;
+    vertical-align: top;
+    width: 
+}*/
+
+.switch-date-btn {
+    /*display: block;*/
+    display: inline-block;
+    vertical-align: top;
+    width: 14px;
+    height: 12px;
+    cursor: pointer;
+    margin: 1px 0 0 8px;
+    padding: 0 0 0 1px;
+    overflow: hidden;
+    position: relative;
+    background: transparent;
+    border: 1px solid transparent;
+}
+
+.switch-date-btn:after {
+    display: block;
+    content: "";
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 9px 5px 0 5px;
+    border-color: #5f97d8 transparent transparent transparent;
+}
+
+.grey-btn-box {
+    width: 45%;
+    text-align: center;
+}
+
+.grey-btn {
+    display: inline-block;
+    vertical-align: top;
+    min-width: 110px;
+    padding: 6px 2px 5px 2px;
+    cursor: pointer;
+    background: rgba(195, 195, 195, 1);
+    text-align: center;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: bold;
+    color: #ffffff;
+    text-shadow: 0px 2px 2px rgba(150, 150, 150, 0.5);
+    text-transform: uppercase;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+
+    -webkit-transition-property: background;
+    -webkit-transition-duration: .3s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: background;
+    -moz-transition-duration: .3s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: background;
+    -ms-transition-duration: .3s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: background;
+    -o-transition-duration: .3s;
+    -o-transition-timing-function: ease;
+
+    transition-property: background;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+}
+
+.grey-btn:hover {
+    background: rgba(157, 157, 157, 1);
+}
+
+.travel-dimensions-box {
+    padding: 20px 0;
+}
+
+.travel-dimension {
+
+}
+
+.preview-place-row-1 {
+    background: rgba(255, 255, 255, 1);
+    position: relative;
+    padding: 0 14px 0 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+}
+
+.preview-place-row-1 .col {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.show-travel-preview .preview-place-row-1 .col-1 {
+    width: 25%;
+    padding: 9px 10px 9px 11px;
+}
+
+.preview-place-row-1 .col-2 {
+    width: 75%;
+    padding: 36px 0 0 15px;
+}
+
+.preview-place-row-1 .col-3 {
+    display: block;
+    width: 14px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: rgba(242, 242, 242, 1);
+    -webkit-border-radius: 0 3px 3px 0;
+    -moz-border-radius: 0 3px 3px 0;
+    -ms-border-radius:0  3p 3px 0x;
+    -o-border-radius: 0 3px 3px 0;
+    border-radius: 0 3px 3px 0;
+}
+
+.preview-place-row-1 .img-box {
+    display: block;
+    width: 72px;
+    height: 72px;
+    overflow: hidden;
+    float: none;
+    margin: 0 auto;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.preview-place-row-1 .img-box img {
+    display: block;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+
+.preview-place-row-1 .col-2 h3 {
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: normal;
+    color: #3d3d3d;
+}
+
+.preview-place-row-1 .col-2 .pill {
+    display: inline-block;
+    vertical-align: top;
+    padding: 0 8px;
+    background: rgba(95, 151, 216, 1);
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 11px;
+    line-height: 16px;
+    font-weight: normal;
+    color: #ffffff;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+}
+
+.preview-place-row-1 .col-2 .pill.blue {
+    background: rgba(95, 151, 216, 1);
+}
+
+.preview-place-row-1 .col-2 .pill.green {
+    background: rgba(102, 166, 45, 1);
+}
+
+.preview-place-row-1 .col-3 .btn-dots {
+    display: block;
+    width: 14px;
+    height: 17px;
+    position: relative;
+    top: 50%;
+    margin: -9px 0 0 0;
+}
+
+.preview-place-row-1 .col-3 .btn-dots div {
+    display: block;
+    width: 4px;
+    height: 3px;
+    margin: 2px auto;
+    background: rgba(190, 190, 190, 1);
+}
+
+.preview-place-row-2 {
+    min-height: 53px;
+    background: rgba(248, 248, 248, 1);
+    position: relative;
+    padding: 0 0 0 25%;
+    border: 1px solid #f8f8f8;
+}
+
+.preview-place-row-2 .col {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.preview-place-row-2 .col-1 {
+    width: 25%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.preview-place-row-2 .col-1:before {
+    display: block;
+    content: "";
+    width: 1px;
+    height: 100%;
+    background: rgba(195, 195, 195, 1);
+    position: absolute;
+    top: 0;
+    left: 40%;
+}
+
+.preview-place-row-2 .col-2 {
+    padding: 20px 0 0 0;
+}
+
+.walker-icon {
+    display: block;
+    width: 15px;
+    height: 24px;
+    position: absolute;
+    top: 50%;
+    left: 33%;
+    margin: -13px 0 0 0;
+    background-color: rgb(248, 248, 248);
+    background-image: url(img/walker_icon.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.preview-place-row-2 .dist-time {
+    display: inline-block;
+    vertical-align: top;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 11px;
+    line-height: 16px;
+    font-weight: normal;
+    color: #c3c3c3;
+}
+
+.preview-place-row-2 .switch-btn {
+    display: inline-block;
+    vertical-align: top;
+    width: 14px;
+    height: 12px;
+    cursor: pointer;
+    margin: 3px 0 0 8px;
+    padding: 0 0 0 1px;
+    overflow: hidden;
+    position: relative;
+    background: transparent;
+    border: 1px solid transparent;
+}
+
+.preview-place-row-2 .switch-btn:after {
+    display: block;
+    content: "";
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 8px 4px 0 4px;
+    border-color: #c3c3c3 transparent transparent transparent;
+}
+
+/* ----- /Show Travel Preview - Content Section ------ */
 
 /*-------------------------------------------*/
 /* ----- FOOTER ------ */
