--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ body {
     height: 100%;
     min-height: 100%;
     min-width: 100%;
+    background: rgba(255, 255, 255, 1);
 }
 
 .clearfix:after {
