--- a/style.css
+++ b/style.css
@@ -2889,6 +2889,268 @@ section.services-sect {
 
 /* ----- /Show Travel Preview - Content Section ------ */
 
+/* ----- Show Add Page - Navigator Section ------ */
+
+.add-page-navigator {
+
+}
+
+.add-page-navigator .col {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.add-page-navigator .col-1 {
+    width: 22%;
+    padding: 0 2% 0 0;
+}
+
+.add-page-navigator .col-2 {
+    width: 78%;
+}
+
+.add-page-navigator .col-2 p {
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: normal;
+    color: #5f97d8;
+}
+
+.add-page-form {
+    padding: 10px 0;
+}
+
+.form-sect {
+    display: block;
+    width: 100%;
+    padding: 13px 0 17px 0;
+    border-top: 1px solid #66a62d;
+    font-size: 0;
+    line-height: 0;
+}
+
+.form-sect h3 {
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: bold;
+    color: #66a62d;
+}
+
+.addpage-col {
+    display: inline-block;
+    vertical-align: top;
+    width: 50%;
+    /*padding: 0 .5%;*/
+    padding-top: 5px;
+    padding-bottom: 10px;
+}
+
+.addpage-col:nth-child(n + 1) {
+    /*padding: 0 0 0 1%;*/
+    padding-left: 1%;
+    padding-right: 0;
+}  
+
+.addpage-col:nth-child(2n) {
+    /*padding: 0 1% 0 0;*/
+    padding-left: 0;
+    padding-right: 1%;
+}
+
+.addpage-col label {
+    display: block;
+    padding: 4px 0;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: bold;
+    color: #5f97d8;
+}
+
+.addpage-col input {
+    display: block;
+    width: 100%;
+    height: 50px;
+    padding: 0 3%;
+    border: 1px solid #cbcbcb;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 12px;
+    line-height: 24px;
+    font-weight: normal;
+    font-style: italic;
+    color: #3d3d3d;
+}
+
+.addpage-col select {
+    display: block;
+    width: 100%;
+    height: 50px;
+    padding: 0 35px 0 3%;
+    background-image: url(img/select_arrow_bg.jpg);
+    background-position: right center;
+    background-repeat: no-repeat;
+    border: 1px solid #cbcbcb;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 12px;
+    line-height: 24px;
+    font-weight: normal;
+    font-style: italic;
+    color: #3d3d3d;
+}
+
+.addpage-col.checkboxes {
+    padding-top: 39px;
+}
+
+.checkbox {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    padding: 13px 0;
+}
+
+.checkbox input[type=checkbox] {
+    display: inline-block;
+    vertical-align: top;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: .01;
+}
+
+.checkbox label {
+    display: inline-block;
+    vertical-align: middle;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: normal;
+    color: #b3b3b1;
+    padding: 0 0 0 31px;
+}
+
+.checkbox input[type=checkbox] + label:before {
+    display: inline-block;
+    vertical-align: top;
+    content: "";
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 13px;
+    left: 0;
+    text-align: center;
+    font-size: 22px;
+    line-height: 19px;
+    font-weight: bold;
+    color: #5f97d8;
+    border: 1px solid #cbcbcb;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+}
+
+.checkbox input[type=checkbox]:checked  + label:before {
+    content: "\2714";
+    border: 1px solid #5f97d8;
+}
+
+.form-sect p {
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: normal;
+    color: #b3b3b1;
+}
+
+.map-form-sect {
+    border-top: none;
+    padding-top: 0;
+}
+
+.add-page-map {
+    display: block;
+    position: relative;
+    height: 500px;
+    margin: 22px 0;
+}
+
+.add-page-map #map {
+    height: 500px;
+}
+
+.submit-btn-box {
+    padding: 0 0 15px 0;
+}
+
+.submit-btn-box .blue-btn {
+    display: block;
+    min-width: 210px;
+    margin: 5px auto;
+    padding: 9px 5px;
+    text-align: center;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    background: rgba(95, 151, 216, 1);
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: bold;
+    color: #ffffff;
+    text-shadow: 0px 2px 2px rgba(48, 100, 197, 0.6);
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+
+    -webkit-transition-property: box-shadow;
+    -webkit-transition-duration: .2s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: box-shadow;
+    -moz-transition-duration: .2s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: box-shadow;
+    -ms-transition-duration: .2s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: box-shadow;
+    -o-transition-duration: .2s;
+    -o-transition-timing-function: ease;
+
+    transition-property: box-shadow;
+    transition-duration: .2s;
+    transition-timing-function: ease;
+}
+
+.blue-btn:hover {
+    background: rgba(116, 163, 218, 1);
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 2px 5px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 2px 5px 0px rgba(50, 50, 50, 0.75);
+}
+
+
+/* ----- /Show Add Page - Navigator Section ------ */
+
 /*-------------------------------------------*/
 /* ----- FOOTER ------ */
 /*-------------------------------------------*/
