--- a/style.css
+++ b/style.css
@@ -119,10 +119,10 @@ select {
 }
 
 &::-ms-expand { 
-    /*display: none;*/
-    /*opacity: 0;*/
+    display: none;
+    opacity: 0;
     position: relative;
-    /*z-index: -1;*/
+    z-index: -1;
 }
 
 input::-webkit-input-placeholder       {opacity: 1; transition: opacity .3s ease;}
