--- a/style.css
+++ b/style.css
@@ -121,8 +121,8 @@ select {
 &::-ms-expand { 
     display: none;
     opacity: 0;
-    position: relative;
-    z-index: -1;
+/*    position: relative;
+    z-index: -1;*/
 }
 
 input::-webkit-input-placeholder       {opacity: 1; transition: opacity .3s ease;}
