--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ select {
     text-overflow: "";
 }
 
-&::-ms-expand { 
+*::-ms-expand { 
     display: none;
     opacity: 0;
 /*    position: relative;
