--- a/style.css
+++ b/style.css
@@ -121,8 +121,8 @@ select {
 *::-ms-expand { 
     display: none;
     opacity: 0;
-/*    position: relative;
-    z-index: -1;*/
+    position: relative;
+    z-index: -1;
 }
 
 input::-webkit-input-placeholder       {opacity: 1; transition: opacity .3s ease;}
@@ -2926,6 +2926,71 @@ section.services-sect {
     padding: 10px 0;
 }
 
+.back-link {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0;
+/*    position: absolute;
+    top: -30px;
+    left: 0;*/
+    margin: -10px 0 0 0;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: normal;
+    color: #cccccc;
+
+    -webkit-transition-property: color;
+    -webkit-transition-duration: .3s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: color;
+    -moz-transition-duration: .3s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: color;
+    -ms-transition-duration: .3s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: color;
+    -o-transition-duration: .3s;
+    -o-transition-timing-function: ease;
+
+    transition-property: color;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+}
+
+.back-link:link,
+.back-link:visited {
+    color: #cccccc;
+}
+
+.back-link.active,
+.back-link:active {
+    color: #5f97d8;
+}
+
+.back-link:hover {
+    color: #5f97d8;
+}
+
+.back-arrow {
+    margin: -3px 0 0 0;
+}
+
+.back-arrow:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: "\2190";
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: normal;
+    color: #cccccc;
+}
+
+
 .form-sect {
     display: block;
     width: 100%;
@@ -2952,6 +3017,10 @@ section.services-sect {
     padding-bottom: 10px;
 }
 
+.addpage-col.block {
+    display: block;
+}
+
 .addpage-col:nth-child(n + 1) {
     /*padding: 0 0 0 1%;*/
     padding-left: 1%;
@@ -2974,6 +3043,10 @@ section.services-sect {
     color: #5f97d8;
 }
 
+.addpage-col label span.grey {
+    color: #b3b3b1;
+}
+
 .addpage-col input {
     display: block;
     width: 100%;
@@ -2991,6 +3064,23 @@ section.services-sect {
     font-weight: normal;
     font-style: italic;
     color: #3d3d3d;
+}
+
+.col-inpt-1 {
+    display: inline-block;
+    vertical-align: middle;
+    width: 8%;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: normal;
+    color: #5f97d8;
+}
+
+.col-inpt-1 + input {
+    display: inline-block;
+    vertical-align: middle;
+    width: 92%;
 }
 
 .addpage-col select {
@@ -3019,9 +3109,19 @@ section.services-sect {
     padding-top: 39px;
 }
 
+.addpage-col .two-cols .checkbox,
+.addpage-col.two-cols .checkbox {
+    width: 50%;
+}
+
+.addpage-col.four-cols .checkbox {
+    width: 24.5%;
+}
+
 .checkbox {
     display: inline-block;
     vertical-align: middle;
+    min-width: 135px;
     position: relative;
     padding: 13px 0;
 }
@@ -3153,6 +3253,30 @@ section.services-sect {
     box-shadow:         0px 2px 5px 0px rgba(50, 50, 50, 0.75);
 }
 
+.form-sect-link {
+    display: inline-block;
+    vertical-align: top;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: normal;
+    color: #5f97d8;
+    text-decoration: underline;
+}
+
+.form-sect-link:link,
+.form-sect-link:visited {
+    text-decoration: underline;
+}
+
+.form-sect-link.active,
+.form-sect-link:active {
+    text-decoration: none;
+}
+
+.form-sect-link:hover {
+    text-decoration: none;
+}
 
 /* ----- /Show Add Page - Navigator Section ------ */
 
