--- a/style.css
+++ b/style.css
@@ -2896,10 +2896,6 @@ section.services-sect {
 
 /* ----- Show Add Page - Navigator Section ------ */
 
-.add-page-navigator {
-
-}
-
 .add-page-navigator .col {
     display: inline-block;
     vertical-align: middle;
@@ -2930,9 +2926,6 @@ section.services-sect {
     display: inline-block;
     vertical-align: middle;
     padding: 0;
-/*    position: absolute;
-    top: -30px;
-    left: 0;*/
     margin: -10px 0 0 0;
     font-family: "Open Sans", Arial, Verdana, sans-serif;
     font-size: 12px;
@@ -3012,25 +3005,57 @@ section.services-sect {
     display: inline-block;
     vertical-align: top;
     width: 50%;
-    /*padding: 0 .5%;*/
     padding-top: 5px;
     padding-bottom: 10px;
 }
 
-.addpage-col.block {
+.addpage-col.row-full {
     display: block;
 }
 
-.addpage-col:nth-child(n + 1) {
-    /*padding: 0 0 0 1%;*/
+.addpage-col.row-full select {
+    width: 98%;
+}
+
+.addpage-col.row-full.two-cols,
+.addpage-col.row-full .two-cols {
+    padding: 0 2% 0 0;
+}
+
+.addpage-col .two-cols input,
+.addpage-col.two-cols input {
+    display: inline-block;
+    vertical-align: top;
+    width: 49%;
+    margin: 0 1% 0 0;
+}
+
+.addpage-col .two-cols select,
+.addpage-col.two-cols select {
+    display: inline-block;
+    vertical-align: top;
+    width: 49%;
+    margin: 0 0 0 1%;
+}
+
+/*.addpage-col:nth-child(n + 1) {
     padding-left: 1%;
     padding-right: 0;
 }  
 
 .addpage-col:nth-child(2n) {
-    /*padding: 0 1% 0 0;*/
     padding-left: 0;
     padding-right: 1%;
+}*/
+
+.addpage-col.left {
+    padding-left: 0;
+    padding-right: 1%; 
+}
+
+.addpage-col.right {
+    padding-left: 1%;
+    padding-right: 0;
 }
 
 .addpage-col label {
@@ -3098,7 +3123,7 @@ section.services-sect {
     -o-border-radius: 3px;
     border-radius: 3px;
     font-family: "Open Sans", Arial, Verdana, sans-serif;
-    font-size: 12px;
+    font-size: 13px;
     line-height: 24px;
     font-weight: normal;
     font-style: italic;
@@ -3253,6 +3278,32 @@ section.services-sect {
     box-shadow:         0px 2px 5px 0px rgba(50, 50, 50, 0.75);
 }
 
+.textarea-box {
+    display: block;
+    width: 100%;
+    height: 305px;
+    overflow: hidden;
+    border: 1px solid #cbcbcb;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.textarea-box textarea {
+    display: block;
+    width: 110%;
+    height: 320px;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: normal;
+    color: #3d3d3d;
+    border: 1px solid transparent;
+    padding: 10px 11% 25px 3%;
+}
+
 .form-sect-link {
     display: inline-block;
     vertical-align: top;
@@ -3276,6 +3327,122 @@ section.services-sect {
 
 .form-sect-link:hover {
     text-decoration: none;
+}
+
+.upload-box {
+    position: relative;
+    min-height: 40px;
+}
+
+.upload-box .upl-txt {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.upl-file-btn-box {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    padding: 5px 2%;
+}
+
+input[type=file].upload-inpt {
+    display: block;
+    width: 60px;
+    height: 10px;
+    background: transparent;
+    overflow: hidden;
+    position: absolute;
+    top: 15px;
+    left: 20px;
+    opacity: .1;
+    z-index: -1;
+}
+
+.upl-file-btn {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    z-index: 2;
+    width: 140px;
+    margin: 5px 2%;
+    padding: 5px 1%;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: normal;
+    color: #fefefe;
+    border: 1px solid transparent;
+    background: rgba(102, 166, 45, 1);
+
+    -webkit-border-radius: 14px;
+    -moz-border-radius: 14px;
+    -ms-border-radius: 14px;
+    -o-border-radius: 14px;
+    border-radius: 14px;
+
+    -webkit-transition-property: background;
+    -webkit-transition-duration: .3s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: background;
+    -moz-transition-duration: .3s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: background;
+    -ms-transition-duration: .3s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: background;
+    -o-transition-duration: .3s;
+    -o-transition-timing-function: ease;
+
+    transition-property: background;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+}
+
+.upl-file-btn:link,
+.upl-file-btn:visited {
+    background: rgba(102, 166, 45, 1);
+}
+
+.upl-file-btn.active,
+.upl-file-btn:active {
+    background: rgba(123, 195, 59, 1);
+}
+
+.upl-file-btn:hover {
+    background: rgba(123, 195, 59, 1);
+}
+
+.blue-h {
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 18px;
+    line-height: 21px;
+    font-weight: bold;
+    color: #5f97d8;
+}
+
+.confirm-box {
+    display: table;
+}
+
+.confirm-box .checkbox {
+    display: table-cell;
+    vertical-align: top;
+    min-width: 30px;
+}
+
+.confirm-box .inline-p {
+    display: table-cell;
+    vertical-align: top;
+    padding: 13px 0;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: normal;
+    color: #b3b3b1;
 }
 
 /* ----- /Show Add Page - Navigator Section ------ */
@@ -3461,7 +3628,6 @@ footer {
 
 .popup {
     display: block;
-    /*padding: 30px 0;*/
     padding: 10px 10px 30px 10px;
     text-align: center;
     background-color: rgb(241, 241, 241);
