--- a/style.css
+++ b/style.css
@@ -3017,40 +3017,28 @@ section.services-sect {
 }
 
 .addpage-col.row-full select {
-    /*width: 98%;*/
     width: 49%;
 }
 
-.addpage-col.row-full.two-cols,
-.addpage-col.row-full .two-cols {
-    padding: 0 2% 0 0;
+.addpage-col.row-full.four-cols {
+    font-size: 0;
+    line-height: 0;
 }
 
-.addpage-col .two-cols input,
-.addpage-col.two-cols input {
+.addpage-col.row-full.four-cols .col {
     display: inline-block;
     vertical-align: top;
-    width: 49%;
-    margin: 0 1% 0 0;
+    width: 25%;
+    padding: 5px 1% 5px 0;
 }
 
-.addpage-col .two-cols select,
-.addpage-col.two-cols select {
-    display: inline-block;
-    vertical-align: top;
-    width: 49%;
-    margin: 0 0 0 1%;
+.addpage-col.row-full.four-cols .col:nth-child(4n) {
+    padding: 5px 0;
 }
 
-/*.addpage-col:nth-child(n + 1) {
-    padding-left: 1%;
-    padding-right: 0;
-}  
-
-.addpage-col:nth-child(2n) {
-    padding-left: 0;
-    padding-right: 1%;
-}*/
+.addpage-col.row-full.four-cols .col select {
+    width: 100%;
+}
 
 .addpage-col.left {
     padding-left: 0;
