--- a/style.css
+++ b/style.css
@@ -263,18 +263,68 @@ a:active {
     display: block;
     float: left;
     width: 18%;
+    position: relative;
+    z-index: 2;
 }
 
 .main-content {
     display: block;
     float: left;
     width: 64%;
+    position: relative;
+    z-index: 2;
+}
+
+.show_attractions_bg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+}
+
+.show_attractions_bg .row {
+    display: block;
+    height: 100%;
+    position: relative;
+}
+
+.show_attractions_bg .row:before {
+    display: block;
+    content: "";
+    width: 493px;
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    left: -27%;
+    background-image: url(img/show_attractions_left_pseudo.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center bottom;
+}
+
+.show_attractions_bg .row:after {
+    display: block;
+    content: "";
+    width: 493px;
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    right: -26%;
+    background-image: url(img/show_attractions_right_pseudo.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center bottom;
 }
 
 .sidebar-right {
     display: block;
     float: right;
     width: 18%;
+    position: relative;
+    z-index: 2;
 }
 
 .row-main-content {
@@ -3800,6 +3850,7 @@ input[type=file].upload-inpt {
     width: 100%;
     margin: 18px 0;
     padding: 7px;
+    background: rgba(255, 255, 255, 1);
     border: 1px solid #e0e0e0;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -3918,7 +3969,7 @@ input[type=file].upload-inpt {
 .main-content .article .white-btn,
 .main-content .article .blue-btn {
     min-width: 195px;
-    margin: 5px 0 5px 2%;
+    margin: 5px 0 2px 2%;
 }
 
 .main-content .article .white-btn {
