--- a/style.css
+++ b/style.css
@@ -5826,14 +5826,15 @@ section.comments-section {
     font-size: 0;
     line-height: 0;
     border-bottom: 1px solid #cbcbcb;
-    padding: 40px 0 0 0;
+    padding: 35px 0 0 0;
 }
 
 .day-tabs-header .tab-link {
     display: inline-block;
     vertical-align: top;
     width: 25%;
-    padding: 0 0 5px 15px;
+    cursor: pointer;
+    padding: 5px 0 5px 15px;
     position: relative;
 }
 
@@ -5856,7 +5857,8 @@ section.comments-section {
     color: #3d3d3d;
 }
 
-.day-tabs-header .tab-link.active h3 {
+.day-tabs-header .tab-link.active h3,
+.day-tabs-header .tab-link:hover h3 {
     color: #5f97d8;
 }
 
@@ -5869,7 +5871,31 @@ section.comments-section {
     text-transform: uppercase;
 }
 
-.day-tabs-header .tab-link.active p {
+.day-tabs-header .tab-link h3,
+.day-tabs-header .tab-link p {
+    -webkit-transition-property: color;
+    -webkit-transition-duration: .3s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: color;
+    -moz-transition-duration: .3s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: color;
+    -ms-transition-duration: .3s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: color;
+    -o-transition-duration: .3s;
+    -o-transition-timing-function: ease;
+
+    transition-property: color;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+}
+
+.day-tabs-header .tab-link.active p,
+.day-tabs-header .tab-link:hover p {
     color: #5f97d8;
 }
 
